добавил запрос получение купленных товаров
