# app/Module/Market/Models/Purchase.php
@@ -5,6 +5,9 @@ namespace App\Module\Market\Models;
 use Carbon\Carbon;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\HasMany;
+use Illuminate\Support\Collection;
 
 /**
  * @property int $id
@@ -15,6 +18,10 @@ use Illuminate\Database\Eloquent\Model;
  * @property ?Carbon $deadline
  * @property ?Carbon $created_at
  * @property ?Carbon $updated_at
+ * @property-read Product $product
+ * @property-read Collection $statuses
+ * @property-read TypeSale $typeSale
+ * @property-read TypeRent $typeRent
  */
 final class Purchase extends Model
 {
@@ -60,7 +67,7 @@ final class Purchase extends Model
         $this->type_sale_id = $typeSaleId;
     }
 
-    public function getTypeRentId(): int
+    public function getTypeRentId(): ?int
     {
         return $this->type_rent_id;
     }
@@ -78,5 +85,45 @@ final class Purchase extends Model
     public function setDeadline(?int $period): void
     {
         $this->deadline = Carbon::now()->addHours($period);
+    }
+
+    public function product(): BelongsTo
+    {
+        return $this->belongsTo(Product::class, 'product_id');
+    }
+
+    public function typeSale(): BelongsTo
+    {
+        return $this->belongsTo(TypeSale::class, 'type_sale_id');
+    }
+
+    public function typeRent(): ?BelongsTo
+    {
+        return $this->belongsTo(TypeRent::class, 'type_rent_id');
+    }
+
+    public function getProduct(): Product
+    {
+        return $this->product;
+    }
+
+    public function statuses(): HasMany
+    {
+        return $this->hasMany(PurchaseStatus::class);
+    }
+
+    public function getStatuses(): Collection
+    {
+        return $this->statuses;
+    }
+
+    public function getTypeSale(): TypeSale
+    {
+        return $this->typeSale;
+    }
+
+    public function getTypeRent(): ?TypeRent
+    {
+        return $this->typeRent;
     }
 }
