# app/Module/Market/Models/PurchaseStatus.php
@@ -5,6 +5,7 @@ namespace App\Module\Market\Models;
 use Carbon\Carbon;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
 
 /**
  * @property int $id
@@ -12,10 +13,35 @@ use Illuminate\Database\Eloquent\Model;
  * @property int $status_id
  * @property Carbon|null $created_at
  * @property Carbon|null $updated_at
+ * @property-read  Status $status
  */
 final class PurchaseStatus extends Model
 {
     use HasFactory;
+
+    /**
+     * @return int
+     */
+    public function getId(): int
+    {
+        return $this->id;
+    }
+
+    /**
+     * @return int
+     */
+    public function getPurchaseId(): int
+    {
+        return $this->purchase_id;
+    }
+
+    /**
+     * @return int
+     */
+    public function getStatusId(): int
+    {
+        return $this->status_id;
+    }
 
     public function setPurchaseId(int $purchaseId): void
     {
@@ -25,5 +51,15 @@ final class PurchaseStatus extends Model
     public function setStatusId(int $statusId): void
     {
         $this->status_id = $statusId;
+    }
+
+    public function status(): BelongsTo
+    {
+        return $this->belongsTo(Status::class, 'status_id');
+    }
+
+    public function getStatus(): Status
+    {
+        return $this->status;
     }
 }
